--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -33,7 +33,7 @@
             android:text="Select Date" />
 
         <ImageView
-            android:id="@+id/image1"
+            android:id="@+id/preview"
             android:layout_width="match_parent"
             android:layout_height="393dp" />
 
