--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -26,6 +26,11 @@
             android:onClick="takePhoto"
             android:text="Take pic" />
 
+        <TextView
+            android:id="@+id/tw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
@@ -42,6 +47,7 @@
             android:id="@+id/button5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="createToDo"
             android:text="Create" />
 
     </LinearLayout>
